made CTF mode default page. fixed wifi crashes for too short password. fixed reboot loop.

--- a/firmware/data/style.css
+++ b/firmware/data/style.css
@@ -32,8 +32,8 @@ header{
 }
 
 #logo{
-    width:120px;
-    height:120px;
+    width:110px;
+    height:110px;
     z-index:10;
     border-radius:0px;
     object-fit:cover;
@@ -160,6 +160,18 @@ button:hover{
 }
 .inputRow td{padding:6px}
 .inputRow input{width:100%;box-sizing:border-box}
+
+#rebootWarning {
+    color: var(--accent); /* Gold */
+    font-weight: bold;
+    margin-bottom: 12px;
+    font-size: 0.95rem;
+    line-height: 1.4;
+    text-transform: uppercase;
+    border: 1px dashed var(--accent); /* Optional: nice box effect */
+    padding: 10px;
+    border-radius: 8px;
+}
 
 /* links and accents */
 a{color:var(--accent)}
